# tagsoup

./: Cargo.toml  license.txt  readme.md
.cargo/: config.toml
.github/workflows/: check.yml
benches/: smoke.rs
examples/: tagsoup.rs
examples/get_all_href/: index.html  main.rs
src/: attribute.rs  attributes.rs  document.rs  element.rs  entity.rs  errors.rs  known.rs  lib.rs  map.rs  nodes.rs  span.rs  tag.rs  utils.rs  visit.rs
src/dom_ref/: attributes.rs  dfs.rs  doctype.rs  document.rs  element.rs  mod.rs  nodes.rs  parser.rs  query.rs
src/dom_ref/tests/: dfs.rs  parser.rs  query.rs
src/lexer/: mod.rs  tests.rs
src/selector/: dfs.rs  mod.rs  parser.rs  tests.rs
src/selector/tests/: dfs.rs  mod.rs  parser.rs
src/tagsoup/: flat.rs  lexer.rs  mod.rs  parser.rs
src/tagsoup/tests/: flat.rs  lexer.rs  mod.rs  parser.rs
tests/: smoke.rs
tests/html_parser/: comments.rs  doctype.rs  element.rs  element_attributes.rs  main.rs  node_iter.rs  output.rs  source_span.rs
tests/html_parser/snapshots/: comments__it_can_parse_document_with_just_comments.snap  document__it_can_parse_document_with_comments.snap  document__it_can_parse_minimal_document.snap  document_fragment__it_can_parse_single_text_as_fragment.snap  document_fragment__it_can_parse_text_comment_element_as_fragment.snap  element__it_can_deal_with_weird_whitespaces.snap  element__it_can_parse_deeply_nested.snap  element__it_can_parse_one_element.snap  (+18 more)
tests/snapshot/: diff.rs  document.rs  document_empty.rs  document_fragment.rs  main.rs  node_iter.rs  svg.rs  text.rs
(+25 files in other folders)
